platforms/NXC/parser.out
Grammar:

Rule 0     S' -> sourceFile
Rule 1     sourceFile -> topLevelDecls orphanStmtList
Rule 2     sourceFile -> orphanStmtList
Rule 3     sourceFile -> importDecls topLevelDecls orphanStmtList
Rule 4     sourceFile -> importDecls orphanStmtList
Rule 5     importDecls -> importDecls importDecl eos
Rule 6     importDecls -> importDecl eos
Rule 7     importDecl -> IMPORT importSpec
Rule 8     importSpec -> importPath
Rule 9     importSpec -> IDENTIFIER importPath
Rule 10    importSpec -> . importPath
Rule 11    importPath -> STRING_LIT
Rule 12    importPath -> IDENTIFIER
Rule 13    topLevelDecls -> topLevelDecls topLevelDecl eos
Rule 14    topLevelDecls -> topLevelDecl eos
Rule 15    orphanStmtList -> statementList eos
Rule 16    topLevelDecl -> functionDecl
Rule 17    topLevelDecl -> declaration
Rule 18    declaration -> varDecl
Rule 19    varDecl -> identifierList DECL_ASGN expressionList
Rule 20    identifierList -> identifierList , IDENTIFIER
Rule 21    identifierList -> IDENTIFIER
Rule 22    functionDecl -> FN IDENTIFIER signature
Rule 23    functionDecl -> FN IDENTIFIER function_
Rule 24    function_ -> signature block
Rule 25    signature -> parameters
Rule 26    signature -> parameters result
Rule 27    result -> type_
Rule 28    result -> parameters
Rule 29    parameters -> ( parameterList , )
Rule 30    parameters -> ( parameterList )
Rule 31    parameters -> ( )
Rule 32    parameterList -> parameterList , parameterDecl
Rule 33    parameterList -> parameterDecl
Rule 34    parameterDecl -> type_
Rule 35    parameterDecl -> identifierList type_
Rule 36    functionLit -> FN function_
Rule 37    expressionList -> expressionList , expression
Rule 38    expressionList -> expression
Rule 39    statementList -> statementList eos statement
Rule 40    statementList -> statement
Rule 41    block -> { statementList }
Rule 42    statement -> simpleStmt
Rule 43    simpleStmt -> assignment
Rule 44    simpleStmt -> expressionStmt
Rule 45    expressionStmt -> expression
Rule 46    assignment -> identifierList assign_op expressionList
Rule 47    arguments -> ( type_ , expressionList , )
Rule 48    arguments -> ( type_ , expressionList )
Rule 49    arguments -> ( type_ , )
Rule 50    arguments -> ( type_ )
Rule 51    arguments -> ( expressionList , )
Rule 52    arguments -> ( expressionList )
Rule 53    arguments -> ( )
Rule 54    expression -> expression BINARY_OP unaryExpr
Rule 55    expression -> unaryExpr
Rule 56    unaryExpr -> UNARY_OP unaryExpr  [precedence=right, level=7]
Rule 57    unaryExpr -> primaryExpr
Rule 58    primaryExpr -> primaryExpr arguments
Rule 59    primaryExpr -> conversion
Rule 60    primaryExpr -> operand
Rule 61    operand -> ( expression )
Rule 62    operand -> operandName
Rule 63    operand -> literal
Rule 64    operandName -> IDENTIFIER
Rule 65    literal -> functionLit
Rule 66    literal -> basicLit
Rule 67    conversion -> type_ ( expression )
Rule 68    type_ -> typeName
Rule 69    typeName -> numericType
Rule 70    typeName -> STRING
Rule 71    typeName -> BOOL
Rule 72    typeName -> RUNE
Rule 73    numericType -> F32
Rule 74    numericType -> F64
Rule 75    numericType -> INT
Rule 76    numericType -> ISIZE
Rule 77    numericType -> I64
Rule 78    numericType -> I32
Rule 79    numericType -> I16
Rule 80    numericType -> I8
Rule 81    numericType -> UINT
Rule 82    numericType -> USIZE
Rule 83    numericType -> U64
Rule 84    numericType -> U32
Rule 85    numericType -> U16
Rule 86    numericType -> U8
Rule 87    basicLit -> INT_LIT
Rule 88    basicLit -> FLOAT_LIT
Rule 89    basicLit -> DECIMAL_LIT EXPONENT
Rule 90    basicLit -> FLOAT_LIT EXPONENT
Rule 91    basicLit -> FALSE
Rule 92    basicLit -> TRUE
Rule 93    basicLit -> RUNE_LIT
Rule 94    basicLit -> STRING_LIT
Rule 95    FLOAT_LIT -> . DECIMAL_LIT
Rule 96    FLOAT_LIT -> DECIMAL_LIT .
Rule 97    FLOAT_LIT -> DECIMAL_LIT . DECIMAL_LIT
Rule 98    INT_LIT -> HEX_LIT
Rule 99    INT_LIT -> OCTAL_LIT
Rule 100   INT_LIT -> BINARY_LIT
Rule 101   INT_LIT -> DECIMAL_LIT
Rule 102   eos -> eos NEWL
Rule 103   eos -> NEWL
Rule 104   eos -> eos ;
Rule 105   eos -> ;
Rule 106   assign_op -> SHR_ASGN  [precedence=right, level=8]
Rule 107   assign_op -> SHL_ASGN  [precedence=right, level=8]
Rule 108   assign_op -> MOD_ASGN  [precedence=right, level=8]
Rule 109   assign_op -> DIV_ASGN  [precedence=right, level=8]
Rule 110   assign_op -> OR_ASGN  [precedence=right, level=8]
Rule 111   assign_op -> AND_ASGN  [precedence=right, level=8]
Rule 112   assign_op -> STAR_ASGN  [precedence=right, level=8]
Rule 113   assign_op -> XOR_ASGN  [precedence=right, level=8]
Rule 114   assign_op -> MINUS_ASGN  [precedence=right, level=8]
Rule 115   assign_op -> PLUS_ASGN  [precedence=right, level=8]
Rule 116   assign_op -> ASSIGN  [precedence=right, level=8]
Rule 117   BINARY_OP -> MUL_OP
Rule 118   BINARY_OP -> ADD_OP
Rule 119   BINARY_OP -> REL_OP
Rule 120   BINARY_OP -> LOGIC_AND  [precedence=left, level=2]
Rule 121   BINARY_OP -> LOGIC_OR  [precedence=left, level=1]
Rule 122   REL_OP -> GE  [precedence=left, level=3]
Rule 123   REL_OP -> GT  [precedence=left, level=3]
Rule 124   REL_OP -> LE  [precedence=left, level=3]
Rule 125   REL_OP -> LT  [precedence=left, level=3]
Rule 126   REL_OP -> NE  [precedence=left, level=3]
Rule 127   REL_OP -> EQ  [precedence=left, level=3]
Rule 128   ADD_OP -> XOR  [precedence=left, level=4]
Rule 129   ADD_OP -> OR  [precedence=left, level=4]
Rule 130   ADD_OP -> MINUS  [precedence=left, level=4]
Rule 131   ADD_OP -> PLUS  [precedence=left, level=4]
Rule 132   MUL_OP -> SHR  [precedence=left, level=5]
Rule 133   MUL_OP -> SHL  [precedence=left, level=5]
Rule 134   MUL_OP -> AND  [precedence=left, level=5]
Rule 135   MUL_OP -> MOD  [precedence=left, level=5]
Rule 136   MUL_OP -> DIV  [precedence=left, level=5]
Rule 137   MUL_OP -> STAR  [precedence=left, level=5]
Rule 138   UNARY_OP -> AND  [precedence=left, level=5]
Rule 139   UNARY_OP -> EXCLM
Rule 140   UNARY_OP -> MINUS  [precedence=left, level=4]

Unused terminals:

    STRUCT
    BREAK
    CONST
    MINUS_MINUS
    STATIC
    IF
    PLUS_PLUS
    MAP
    AS
    ENUM
    ELSE
    IN
    RETURN
    CONTINUE
    TYPE
    MATCH
    FOR

Terminals, with rules where they appear:

(                    : 29 30 31 47 48 49 50 51 52 53 61 67
)                    : 29 30 31 47 48 49 50 51 52 53 61 67
,                    : 20 29 32 37 47 47 48 49 51
.                    : 10 95 96 97
;                    : 104 105
AND                  : 134 138
AND_ASGN             : 111
AS                   : 
ASSIGN               : 116
BINARY_LIT           : 100
BOOL                 : 71
BREAK                : 
CONST                : 
CONTINUE             : 
DECIMAL_LIT          : 89 95 96 97 97 101
DECL_ASGN            : 19
DIV                  : 136
DIV_ASGN             : 109
ELSE                 : 
ENUM                 : 
EQ                   : 127
EXCLM                : 139
EXPONENT             : 89 90
F32                  : 73
F64                  : 74
FALSE                : 91
FN                   : 22 23 36
FOR                  : 
GE                   : 122
GT                   : 123
HEX_LIT              : 98
I16                  : 79
I32                  : 78
I64                  : 77
I8                   : 80
IDENTIFIER           : 9 12 20 21 22 23 64
IF                   : 
IMPORT               : 7
IN                   : 
INT                  : 75
ISIZE                : 76
LE                   : 124
LOGIC_AND            : 120
LOGIC_OR             : 121
LT                   : 125
MAP                  : 
MATCH                : 
MINUS                : 130 140
MINUS_ASGN           : 114
MINUS_MINUS          : 
MOD                  : 135
MOD_ASGN             : 108
NE                   : 126
NEWL                 : 102 103
OCTAL_LIT            : 99
OR                   : 129
OR_ASGN              : 110
PLUS                 : 131
PLUS_ASGN            : 115
PLUS_PLUS            : 
RETURN               : 
RUNE                 : 72
RUNE_LIT             : 93
SHL                  : 133
SHL_ASGN             : 107
SHR                  : 132
SHR_ASGN             : 106
STAR                 : 137
STAR_ASGN            : 112
STATIC               : 
STRING               : 70
STRING_LIT           : 11 94
STRUCT               : 
TRUE                 : 92
TYPE                 : 
U16                  : 85
U32                  : 84
U64                  : 83
U8                   : 86
UINT                 : 81
USIZE                : 82
XOR                  : 128
XOR_ASGN             : 113
error                : 
{                    : 41
}                    : 41

Nonterminals, with rules where they appear:

ADD_OP               : 118
BINARY_OP            : 54
FLOAT_LIT            : 88 90
INT_LIT              : 87
MUL_OP               : 117
REL_OP               : 119
UNARY_OP             : 56
arguments            : 58
assign_op            : 46
assignment           : 43
basicLit             : 66
block                : 24
conversion           : 59
declaration          : 17
eos                  : 5 6 13 14 15 39 102 104
expression           : 37 38 45 54 61 67
expressionList       : 19 37 46 47 48 51 52
expressionStmt       : 44
functionDecl         : 16
functionLit          : 65
function_            : 23 36
identifierList       : 19 20 35 46
importDecl           : 5 6
importDecls          : 3 4 5
importPath           : 8 9 10
importSpec           : 7
literal              : 63
numericType          : 69
operand              : 60
operandName          : 62
orphanStmtList       : 1 2 3 4
parameterDecl        : 32 33
parameterList        : 29 30 32
parameters           : 25 26 28
primaryExpr          : 57 58
result               : 26
signature            : 22 24
simpleStmt           : 42
sourceFile           : 0
statement            : 39 40
statementList        : 15 39 41
topLevelDecl         : 13 14
topLevelDecls        : 1 3 13
typeName             : 68
type_                : 27 34 35 47 48 49 50 67
unaryExpr            : 54 55 56
varDecl              : 18


state 0

    (0) S' -> . sourceFile
    (1) sourceFile -> . topLevelDecls orphanStmtList
    (2) sourceFile -> . orphanStmtList
    (3) sourceFile -> . importDecls topLevelDecls orphanStmtList
    (4) sourceFile -> . importDecls orphanStmtList
    (13) topLevelDecls -> . topLevelDecls topLevelDecl eos
    (14) topLevelDecls -> . topLevelDecl eos
    (15) orphanStmtList -> . statementList eos
    (5) importDecls -> . importDecls importDecl eos
    (6) importDecls -> . importDecl eos
    (16) topLevelDecl -> . functionDecl
    (17) topLevelDecl -> . declaration
    (39) statementList -> . statementList eos statement
    (40) statementList -> . statement
    (7) importDecl -> . IMPORT importSpec
    (22) functionDecl -> . FN IDENTIFIER signature
    (23) functionDecl -> . FN IDENTIFIER function_
    (18) declaration -> . varDecl
    (42) statement -> . simpleStmt
    (19) varDecl -> . identifierList DECL_ASGN expressionList
    (43) simpleStmt -> . assignment
    (44) simpleStmt -> . expressionStmt
    (20) identifierList -> . identifierList , IDENTIFIER
    (21) identifierList -> . IDENTIFIER
    (46) assignment -> . identifierList assign_op expressionList
    (45) expressionStmt -> . expression
    (54) expression -> . expression BINARY_OP unaryExpr
    (55) expression -> . unaryExpr
    (56) unaryExpr -> . UNARY_OP unaryExpr
    (57) unaryExpr -> . primaryExpr
    (138) UNARY_OP -> . AND
    (139) UNARY_OP -> . EXCLM
    (140) UNARY_OP -> . MINUS
    (58) primaryExpr -> . primaryExpr arguments
    (59) primaryExpr -> . conversion
    (60) primaryExpr -> . operand
    (67) conversion -> . type_ ( expression )
    (61) operand -> . ( expression )
    (62) operand -> . operandName
    (63) operand -> . literal
    (68) type_ -> . typeName
    (64) operandName -> . IDENTIFIER
    (65) literal -> . functionLit
    (66) literal -> . basicLit
    (69) typeName -> . numericType
    (70) typeName -> . STRING
    (71) typeName -> . BOOL
    (72) typeName -> . RUNE
    (36) functionLit -> . FN function_
    (87) basicLit -> . INT_LIT
    (88) basicLit -> . FLOAT_LIT
    (89) basicLit -> . DECIMAL_LIT EXPONENT
    (90) basicLit -> . FLOAT_LIT EXPONENT
    (91) basicLit -> . FALSE
    (92) basicLit -> . TRUE
    (93) basicLit -> . RUNE_LIT
    (94) basicLit -> . STRING_LIT
    (73) numericType -> . F32
    (74) numericType -> . F64
    (75) numericType -> . INT
    (76) numericType -> . ISIZE
    (77) numericType -> . I64
    (78) numericType -> . I32
    (79) numericType -> . I16
    (80) numericType -> . I8
    (81) numericType -> . UINT
    (82) numericType -> . USIZE
    (83) numericType -> . U64
    (84) numericType -> . U32
    (85) numericType -> . U16
    (86) numericType -> . U8
    (98) INT_LIT -> . HEX_LIT
    (99) INT_LIT -> . OCTAL_LIT
    (100) INT_LIT -> . BINARY_LIT
    (101) INT_LIT -> . DECIMAL_LIT
    (95) FLOAT_LIT -> . . DECIMAL_LIT
    (96) FLOAT_LIT -> . DECIMAL_LIT .
    (97) FLOAT_LIT -> . DECIMAL_LIT . DECIMAL_LIT
    IMPORT          shift and go to state 11
    FN              shift and go to state 12
    IDENTIFIER      shift and go to state 13
    AND             shift and go to state 23
    EXCLM           shift and go to state 24
    MINUS           shift and go to state 25
    (               shift and go to state 29
    STRING          shift and go to state 36
    BOOL            shift and go to state 37
    RUNE            shift and go to state 38
    DECIMAL_LIT     shift and go to state 41
    FALSE           shift and go to state 42
    TRUE            shift and go to state 43
    RUNE_LIT        shift and go to state 44
    STRING_LIT      shift and go to state 45
    F32             shift and go to state 46
    F64             shift and go to state 47
    INT             shift and go to state 48
    ISIZE           shift and go to state 49
    I64             shift and go to state 50
    I32             shift and go to state 51
    I16             shift and go to state 52
    I8              shift and go to state 53
    UINT            shift and go to state 54
    USIZE           shift and go to state 55
    U64             shift and go to state 56
    U32             shift and go to state 57
    U16             shift and go to state 58
    U8              shift and go to state 59
    HEX_LIT         shift and go to state 60
    OCTAL_LIT       shift and go to state 61
    BINARY_LIT      shift and go to state 62
    .               shift and go to state 63

    sourceFile                     shift and go to state 1
    topLevelDecls                  shift and go to state 2
    orphanStmtList                 shift and go to state 3
    importDecls                    shift and go to state 4
    topLevelDecl                   shift and go to state 5
    statementList                  shift and go to state 6
    importDecl                     shift and go to state 7
    functionDecl                   shift and go to state 8
    declaration                    shift and go to state 9
    statement                      shift and go to state 10
    varDecl                        shift and go to state 14
    simpleStmt                     shift and go to state 15
    identifierList                 shift and go to state 16
    assignment                     shift and go to state 17
    expressionStmt                 shift and go to state 18
    expression                     shift and go to state 19
    unaryExpr                      shift and go to state 20
    UNARY_OP                       shift and go to state 21
    primaryExpr                    shift and go to state 22
    conversion                     shift and go to state 26
    operand                        shift and go to state 27
    type_                          shift and go to state 28
    operandName                    shift and go to state 30
    literal                        shift and go to state 31
    typeName                       shift and go to state 32
    functionLit                    shift and go to state 33
    basicLit                       shift and go to state 34
    numericType                    shift and go to state 35
    INT_LIT                        shift and go to state 39
    FLOAT_LIT                      shift and go to state 40

state 1

    (0) S' -> sourceFile .


state 2

    (1) sourceFile -> topLevelDecls . orphanStmtList
    (13) topLevelDecls -> topLevelDecls . topLevelDecl eos
    (15) orphanStmtList -> . statementList eos
    (16) topLevelDecl -> . functionDecl
    (17) topLevelDecl -> . declaration
    (39) statementList -> . statementList eos statement
    (40) statementList -> . statement
    (22) functionDecl -> . FN IDENTIFIER signature
    (23) functionDecl -> . FN IDENTIFIER function_
    (18) declaration -> . varDecl
    (42) statement -> . simpleStmt
    (19) varDecl -> . identifierList DECL_ASGN expressionList
    (43) simpleStmt -> . assignment
    (44) simpleStmt -> . expressionStmt
    (20) identifierList -> . identifierList , IDENTIFIER
    (21) identifierList -> . IDENTIFIER
    (46) assignment -> . identifierList assign_op expressionList
    (45) expressionStmt -> . expression
    (54) expression -> . expression BINARY_OP unaryExpr
    (55) expression -> . unaryExpr
    (56) unaryExpr -> . UNARY_OP unaryExpr
    (57) unaryExpr -> . primaryExpr
    (138) UNARY_OP -> . AND
    (139) UNARY_OP -> . EXCLM
    (140) UNARY_OP -> . MINUS
    (58) primaryExpr -> . primaryExpr arguments
    (59) primaryExpr -> . conversion
    (60) primaryExpr -> . operand
    (67) conversion -> . type_ ( expression )
    (61) operand -> . ( expression )
    (62) operand -> . operandName
    (63) operand -> . literal
    (68) type_ -> . typeName
    (64) operandName -> . IDENTIFIER
    (65) literal -> . functionLit
    (66) literal -> . basicLit
    (69) typeName -> . numericType
    (70) typeName -> . STRING
    (71) typeName -> . BOOL
    (72) typeName -> . RUNE
    (36) functionLit -> . FN function_
    (87) basicLit -> . INT_LIT
    (88) basicLit -> . FLOAT_LIT
    (89) basicLit -> . DECIMAL_LIT EXPONENT
    (90) basicLit -> . FLOAT_LIT EXPONENT
    (91) basicLit -> . FALSE
    (92) basicLit -> . TRUE
    (93) basicLit -> . RUNE_LIT
    (94) basicLit -> . STRING_LIT
    (73) numericType -> . F32
    (74) numericType -> . F64
    (75) numericType -> . INT
    (76) numericType -> . ISIZE
    (77) numericType -> . I64
    (78) numericType -> . I32
    (79) numericType -> . I16
    (80) numericType -> . I8
    (81) numericType -> . UINT
    (82) numericType -> . USIZE
    (83) numericType -> . U64
    (84) numericType -> . U32
    (85) numericType -> . U16
    (86) numericType -> . U8
    (98) INT_LIT -> . HEX_LIT
    (99) INT_LIT -> . OCTAL_LIT
    (100) INT_LIT -> . BINARY_LIT
    (101) INT_LIT -> . DECIMAL_LIT
    (95) FLOAT_LIT -> . . DECIMAL_LIT
    (96) FLOAT_LIT -> . DECIMAL_LIT .
    (97) FLOAT_LIT -> . DECIMAL_LIT . DECIMAL_LIT
    FN              shift and go to state 12
    IDENTIFIER      shift and go to state 13
    AND             shift and go to state 23
    EXCLM           shift and go to state 24
    MINUS           shift and go to state 25
    (               shift and go to state 29
    STRING          shift and go to state 36
    BOOL            shift and go to state 37
    RUNE            shift and go to state 38
    DECIMAL_LIT     shift and go to state 41
    FALSE           shift and go to state 42
    TRUE            shift and go to state 43
    RUNE_LIT        shift and go to state 44
    STRING_LIT      shift and go to state 45
    F32             shift and go to state 46
    F64             shift and go to state 47
    INT             shift and go to state 48
    ISIZE           shift and go to state 49
    I64             shift and go to state 50
    I32             shift and go to state 51
    I16             shift and go to state 52
    I8              shift and go to state 53
    UINT            shift and go to state 54
    USIZE           shift and go to state 55
    U64             shift and go to state 56
    U32             shift and go to state 57
    U16             shift and go to state 58
    U8              shift and go to state 59
    HEX_LIT         shift and go to state 60
    OCTAL_LIT       shift and go to state 61
    BINARY_LIT      shift and go to state 62
    .               shift and go to state 63

    orphanStmtList                 shift and go to state 64
    topLevelDecl                   shift and go to state 65
    statementList                  shift and go to state 6
    functionDecl                   shift and go to state 8
    declaration                    shift and go to state 9
    statement                      shift and go to state 10
    varDecl                        shift and go to state 14
    simpleStmt                     shift and go to state 15
    identifierList                 shift and go to state 16
    assignment                     shift and go to state 17
    expressionStmt                 shift and go to state 18
    expression                     shift and go to state 19
    unaryExpr                      shift and go to state 20
    UNARY_OP                       shift and go to state 21
    primaryExpr                    shift and go to state 22
    conversion                     shift and go to state 26
    operand                        shift and go to state 27
    type_                          shift and go to state 28
    operandName                    shift and go to state 30
    literal                        shift and go to state 31
    typeName                       shift and go to state 32
    functionLit                    shift and go to state 33
    basicLit                       shift and go to state 34
    numericType                    shift and go to state 35
    INT_LIT                        shift and go to state 39
    FLOAT_LIT                      shift and go to state 40

state 3

    (2) sourceFile -> orphanStmtList .
    $end            reduce using rule 2 (sourceFile -> orphanStmtList .)


state 4

    (3) sourceFile -> importDecls . topLevelDecls orphanStmtList
    (4) sourceFile -> importDecls . orphanStmtList
    (5) importDecls -> importDecls . importDecl eos
    (13) topLevelDecls -> . topLevelDecls topLevelDecl eos
    (14) topLevelDecls -> . topLevelDecl eos
    (15) orphanStmtList -> . statementList eos
    (7) importDecl -> . IMPORT importSpec
    (16) topLevelDecl -> . functionDecl
    (17) topLevelDecl -> . declaration
    (39) statementList -> . statementList eos statement
    (40) statementList -> . statement
    (22) functionDecl -> . FN IDENTIFIER signature
    (23) functionDecl -> . FN IDENTIFIER function_
    (18) declaration -> . varDecl
    (42) statement -> . simpleStmt
    (19) varDecl -> . identifierList DECL_ASGN expressionList
    (43) simpleStmt -> . assignment
    (44) simpleStmt -> . expressionStmt
    (20) identifierList -> . identifierList , IDENTIFIER
    (21) identifierList -> . IDENTIFIER
    (46) assignment -> . identifierList assign_op expressionList
    (45) expressionStmt -> . expression
    (54) expression -> . expression BINARY_OP unaryExpr
    (55) expression -> . unaryExpr
    (56) unaryExpr -> . UNARY_OP unaryExpr
    (57) unaryExpr -> . primaryExpr
    (138) UNARY_OP -> . AND
    (139) UNARY_OP -> . EXCLM
    (140) UNARY_OP -> . MINUS
    (58) primaryExpr -> . primaryExpr arguments
    (59) primaryExpr -> . conversion
    (60) primaryExpr -> . operand
    (67) conversion -> . type_ ( expression )
    (61) operand -> . ( expression )
    (62) operand -> . operandName
    (63) operand -> . literal
    (68) type_ -> . typeName
    (64) operandName -> . IDENTIFIER
    (65) literal -> . functionLit
    (66) literal -> . basicLit
    (69) typeName -> . numericType
    (70) typeName -> . STRING
    (71) typeName -> . BOOL
    (72) typeName -> . RUNE
    (36) functionLit -> . FN function_
    (87) basicLit -> . INT_LIT
    (88) basicLit -> . FLOAT_LIT
    (89) basicLit -> . DECIMAL_LIT EXPONENT
    (90) basicLit -> . FLOAT_LIT EXPONENT
    (91) basicLit -> . FALSE
    (92) basicLit -> . TRUE
    (93) basicLit -> . RUNE_LIT
    (94) basicLit -> . STRING_LIT
    (73) numericType -> . F32
    (74) numericType -> . F64
    (75) numericType -> . INT
    (76) numericType -> . ISIZE
    (77) numericType -> . I64
    (78) numericType -> . I32
    (79) numericType -> . I16
    (80) numericType -> . I8
    (81) numericType -> . UINT
    (82) numericType -> . USIZE
    (83) numericType -> . U64
    (84) numericType -> . U32
    (85) numericType -> . U16
    (86) numericType -> . U8
    (98) INT_LIT -> . HEX_LIT
    (99) INT_LIT -> . OCTAL_LIT
    (100) INT_LIT -> . BINARY_LIT
    (101) INT_LIT -> . DECIMAL_LIT
    (95) FLOAT_LIT -> . . DECIMAL_LIT
    (96) FLOAT_LIT -> . DECIMAL_LIT .
    (97) FLOAT_LIT -> . DECIMAL_LIT . DECIMAL_LIT
    IMPORT          shift and go to state 11
    FN              shift and go to state 12
    IDENTIFIER      shift and go to state 13
    AND             shift and go to state 23
    EXCLM           shift and go to state 24
    MINUS           shift and go to state 25
    (               shift and go to state 29
    STRING          shift and go to state 36
    BOOL            shift and go to state 37
    RUNE            shift and go to state 38
    DECIMAL_LIT     shift and go to state 41
    FALSE           shift and go to state 42
    TRUE            shift and go to state 43
    RUNE_LIT        shift and go to state 44
    STRING_LIT      shift and go to state 45
    F32             shift and go to state 46
    F64             shift and go to state 47
    INT             shift and go to state 48
    ISIZE           shift and go to state 49
    I64             shift and go to state 50
    I32             shift and go to state 51
    I16             shift and go to state 52
    I8              shift and go to state 53
    UINT            shift and go to state 54
    USIZE           shift and go to state 55
    U64             shift and go to state 56
    U32             shift and go to state 57
    U16             shift and go to state 58
    U8              shift and go to state 59
    HEX_LIT         shift and go to state 60
    OCTAL_LIT       shift and go to state 61
    BINARY_LIT      shift and go to state 62
    .               shift and go to state 63

    topLevelDecls                  shift and go to state 66
    orphanStmtList                 shift and go to state 67
    importDecl                     shift and go to state 68
    topLevelDecl                   shift and go to state 5
    statementList                  shift and go to state 6
    functionDecl                   shift and go to state 8
    declaration                    shift and go to state 9
    statement                      shift and go to state 10
    varDecl                        shift and go to state 14
    simpleStmt                     shift and go to state 15
    identifierList                 shift and go to state 16
    assignment                     shift and go to state 17
    expressionStmt                 shift and go to state 18
    expression                     shift and go to state 19
    unaryExpr                      shift and go to state 20
    UNARY_OP                       shift and go to state 21
    primaryExpr                    shift and go to state 22
    conversion                     shift and go to state 26
    operand                        shift and go to state 27
    type_                          shift and go to state 28
    operandName                    shift and go to state 30
    literal                        shift and go to state 31
    typeName                       shift and go to state 32
    functionLit                    shift and go to state 33
    basicLit                       shift and go to state 34
    numericType                    shift and go to state 35
    INT_LIT                        shift and go to state 39
    FLOAT_LIT                      shift and go to state 40

state 5

    (14) topLevelDecls -> topLevelDecl . eos
    (102) eos -> . eos NEWL
    (103) eos -> . NEWL
    (104) eos -> . eos ;
    (105) eos -> . ;
    NEWL            shift and go to state 70
    ;               shift and go to state 71

    eos                            shift and go to state 69

state 6

    (15) orphanStmtList -> statementList . eos
    (39) statementList -> statementList . eos statement
    (102) eos -> . eos NEWL
    (103) eos -> . NEWL
    (104) eos -> . eos ;
    (105) eos -> . ;
    NEWL            shift and go to state 70
    ;               shift and go to state 71

    eos                            shift and go to state 72

state 7

    (6) importDecls -> importDecl . eos
    (102) eos -> . eos NEWL
    (103) eos -> . NEWL
    (104) eos -> . eos ;
    (105) eos -> . ;
    NEWL            shift and go to state 70
    ;               shift and go to state 71

    eos                            shift and go to state 73

state 8

    (16) topLevelDecl -> functionDecl .
    NEWL            reduce using rule 16 (topLevelDecl -> functionDecl .)
    ;               reduce using rule 16 (topLevelDecl -> functionDecl .)


state 9

    (17) topLevelDecl -> declaration .
    NEWL            reduce using rule 17 (topLevelDecl -> declaration .)
    ;               reduce using rule 17 (topLevelDecl -> declaration .)


state 10

    (40) statementList -> statement .
    NEWL            reduce using rule 40 (statementList -> statement .)
    ;               reduce using rule 40 (statementList -> statement .)
    }               reduce using rule 40 (statementList -> statement .)


state 11

    (7) importDecl -> IMPORT . importSpec
    (8) importSpec -> . importPath
    (9) importSpec -> . IDENTIFIER importPath
    (10) importSpec -> . . importPath
    (11) importPath -> . STRING_LIT
    (12) importPath -> . IDENTIFIER
    IDENTIFIER      shift and go to state 76
    .               shift and go to state 77
    STRING_LIT      shift and go to state 78

    importSpec                     shift and go to state 74
    importPath                     shift and go to state 75

state 12

    (22) functionDecl -> FN . IDENTIFIER signature
    (23) functionDecl -> FN . IDENTIFIER function_
    (36) functionLit -> FN . function_
    (24) function_ -> . signature block
    (25) signature -> . parameters
    (26) signature -> . parameters result
    (29) parameters -> . ( parameterList , )
    (30) parameters -> . ( parameterList )
    (31) parameters -> . ( )
    IDENTIFIER      shift and go to state 79
    (               shift and go to state 83

    signature                      shift and go to state 80
    function_                      shift and go to state 81
    parameters                     shift and go to state 82

state 13

    (21) identifierList -> IDENTIFIER .
    (64) operandName -> IDENTIFIER .
    DECL_ASGN       reduce using rule 21 (identifierList -> IDENTIFIER .)
    ,               reduce using rule 21 (identifierList -> IDENTIFIER .)
    SHR_ASGN        reduce using rule 21 (identifierList -> IDENTIFIER .)
    SHL_ASGN        reduce using rule 21 (identifierList -> IDENTIFIER .)
    MOD_ASGN        reduce using rule 21 (identifierList -> IDENTIFIER .)
    DIV_ASGN        reduce using rule 21 (identifierList -> IDENTIFIER .)
    OR_ASGN         reduce using rule 21 (identifierList -> IDENTIFIER .)
    AND_ASGN        reduce using rule 21 (identifierList -> IDENTIFIER .)
    STAR_ASGN       reduce using rule 21 (identifierList -> IDENTIFIER .)
    XOR_ASGN        reduce using rule 21 (identifierList -> IDENTIFIER .)
    MINUS_ASGN      reduce using rule 21 (identifierList -> IDENTIFIER .)
    PLUS_ASGN       reduce using rule 21 (identifierList -> IDENTIFIER .)
    ASSIGN          reduce using rule 21 (identifierList -> IDENTIFIER .)
    (               reduce using rule 64 (operandName -> IDENTIFIER .)
    LOGIC_AND       reduce using rule 64 (operandName -> IDENTIFIER .)
    LOGIC_OR        reduce using rule 64 (operandName -> IDENTIFIER .)
    SHR             reduce using rule 64 (operandName -> IDENTIFIER .)
    SHL             reduce using rule 64 (operandName -> IDENTIFIER .)
    AND             reduce using rule 64 (operandName -> IDENTIFIER .)
    MOD             reduce using rule 64 (operandName -> IDENTIFIER .)
    DIV             reduce using rule 64 (operandName -> IDENTIFIER .)
    STAR            reduce using rule 64 (operandName -> IDENTIFIER .)
    XOR             reduce using rule 64 (operandName -> IDENTIFIER .)
    OR              reduce using rule 64 (operandName -> IDENTIFIER .)
    MINUS           reduce using rule 64 (operandName -> IDENTIFIER .)
    PLUS            reduce using rule 64 (operandName -> IDENTIFIER .)
    GE              reduce using rule 64 (operandName -> IDENTIFIER .)
    GT              reduce using rule 64 (operandName -> IDENTIFIER .)
    LE              reduce using rule 64 (operandName -> IDENTIFIER .)
    LT              reduce using rule 64 (operandName -> IDENTIFIER .)
    NE              reduce using rule 64 (operandName -> IDENTIFIER .)
    EQ              reduce using rule 64 (operandName -> IDENTIFIER .)
    NEWL            reduce using rule 64 (operandName -> IDENTIFIER .)
    ;               reduce using rule 64 (operandName -> IDENTIFIER .)
    }               reduce using rule 64 (operandName -> IDENTIFIER .)


state 14

    (18) declaration -> varDecl .
    NEWL            reduce using rule 18 (declaration -> varDecl .)
    ;               reduce using rule 18 (declaration -> varDecl .)


state 15

    (42) statement -> simpleStmt .
    NEWL            reduce using rule 42 (statement -> simpleStmt .)
    ;               reduce using rule 42 (statement -> simpleStmt .)
    }               reduce using rule 42 (statement -> simpleStmt .)


state 16
